refactor: change endpoints return
